Extracted base path to env

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 NEXT_PUBLIC_API_URL=../../../../ms/ai-assistant/api/agent/lc/v1
+# Use below value for building the app for firm level deployment
+# NEXT_PUBLIC_API_URL=../../ms/ai-assistant/api/agent/lc/v1
 NEXT_PUBLIC_ASSISTANT_ID=react-agent
+
+# Build params
+NEXT_PUBLIC_BASE_PATH=/apps/agent-chat-ui/primary
